--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,36 @@
 name: fridge_manager
-description: "A new Flutter project."
+description: "An app to manage product expiration dates."
+version: 1.0.0+1
 publish_to: 'none'
-version: 0.1.0
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
+  local_storage_products_api:
+    path: packages/local_storage_products_api
+  products_api:
+    path: packages/products_api
+  products_repository:
+    path: packages/products_repository
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  build_runner: ^2.2.0
   flutter_lints: ^3.0.0
+  intl_utils: ^2.8.7
 
 flutter:
   uses-material-design: true
+  generate: true
+
+flutter_intl:
+  enabled: true
+  output_dir: lib/l10n
