chore: add more todos

--- a/TODO.yaml
+++ b/TODO.yaml
@@ -23,3 +23,6 @@ Storage:
 
 Whole Feature:
   TODO: Family/Co-op Feature (Family members can share the same Household)
+
+Potential Features:
+  TODO: Add "Shopping List" Page
