--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     path: packages/products_api
   products_repository:
     path: packages/products_repository
+  app_ui:
+    path: packages/app_ui
 
 dev_dependencies:
   build_runner: ^2.2.0
