--- a/packages/app_ui/pubspec.yaml
+++ b/packages/app_ui/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.19.0
+  app_utils:
+    path: ../app_utils
 
 dev_dependencies:
   flutter_test:
