feat: add important notifications

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,3 +16,17 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.1'
+
+        //implementation 'androidx.window:window:1.0.0'
+        //implementation 'androidx.window:window-java:1.0.0'
+    }   
+}
