--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     path: packages/app_ui
   app_utils:
     path: packages/app_utils
+  flutter_local_notifications: ^17.1.2
+  rxdart: ^0.27.7
+  flutter_timezone: ^1.0.8
 
 dev_dependencies:
   build_runner: ^2.2.0
