--- a/packages/products_api/pubspec.yaml
+++ b/packages/products_api/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   meta: ^1.7.0
   uuid: ^3.0.6
 
+  app_utils:
+    path: ../app_utils
+
 dev_dependencies:
   build_runner: ^2.2.0
   json_serializable: ^6.3.1
