--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   rxdart: ^0.27.7
   flutter_timezone: ^1.0.8
   firebase_core: ^3.0.0
+  cloud_firestore: ^5.0.0
 
 dev_dependencies:
   build_runner: ^2.2.0
