refactor: moved remaining packages into lib folder

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,9 @@ dependencies:
   products_repository:
     path: lib/src/domain/products_repository
   app_ui:
-    path: packages/app_ui
+    path: lib/src/presentation/app_ui
   app_utils:
-    path: packages/app_utils
+    path: lib/src/shared/app_utils
   flutter_local_notifications: ^17.1.2
   rxdart: ^0.27.7
   flutter_timezone: ^1.0.8
