--- a/lib/src/data/products_api/pubspec.yaml
+++ b/lib/src/data/products_api/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   uuid: ^3.0.6
 
   app_utils:
-    path: ../../../../packages/app_utils
+    path: ../../shared/app_utils
 
 dev_dependencies:
   build_runner: ^2.2.0
