--- a/lib/src/presentation/app_ui/pubspec.yaml
+++ b/lib/src/presentation/app_ui/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   app_utils:
-    path: ../app_utils
+    path: ../../shared/app_utils
 
 dev_dependencies:
   flutter_test:
