--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,13 @@
 {
     "configurations": [
-        
-    {
-        "name": "Flutter",
-        "type": "dart",
-        "request": "launch",
-        "program": "lib/src/main/main.dart"
-    }
+        {
+            "name": "Flutter",
+            "type": "dart",
+            "request": "launch",
+            "program": "lib/src/main/main.dart",
+            "args": [
+                "-v"
+            ]
+        }
     ]
 }
