--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   flutter_timezone: ^1.0.8
   firebase_core: ^3.1.1
   cloud_firestore: ^5.0.2
+  json_annotation: ^4.9.0
+  uuid: ^4.4.0
+  meta: ^1.12.0
 
 dev_dependencies:
   build_runner: ^2.4.11
