--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.11
+  json_serializable: ^6.8.0
   flutter_lints: ^4.0.0
   intl_utils: ^2.8.7
 
