--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   json_serializable: ^6.8.0
   flutter_lints: ^4.0.0
   intl_utils: ^2.8.7
+  test: ^1.25.2
 
 flutter:
   uses-material-design: true
