--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   uuid: ^4.4.0
   meta: ^1.12.0
   shared_preferences: ^2.2.3
+  openfoodfacts: ^3.12.0
 
 dev_dependencies:
   build_runner: ^2.4.11
