--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   shared_preferences: ^2.2.3
   openfoodfacts: ^3.12.0
 
+  mobile_scanner: ^5.1.1
+
 dev_dependencies:
   build_runner: ^2.4.11
   json_serializable: ^6.8.0
