--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
 
   mobile_scanner: ^5.1.1
 
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 dev_dependencies:
   build_runner: ^2.4.11
   json_serializable: ^6.8.0
