--- a/TODO.yaml
+++ b/TODO.yaml
@@ -42,3 +42,7 @@ Potential Features:
 
 TODO: add toString for State and Models for logging
 TODO: fix: sometimes when creating New Product old ones get overwrited instead
+
+TODO: save name changes to hive
+TODO: choose to update in hive or not
+TODO: loading animation in scanner
