--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   intl_utils: ^2.8.7
   test: ^1.25.2
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
@@ -48,3 +49,12 @@ flutter:
 flutter_intl:
   enabled: true
   output_dir: lib/l10n
+
+flutter_launcher_icons:
+  image_path: "assets/icon/icon_combined.png"
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  adaptive_icon_foreground: "assets/icon/icon_foreground.png"
+  adaptive_icon_monochrome: "assets/icon/icon_foreground.png"
+  adaptive_icon_background: "#102E3B"
