--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
+  flutter_expandable_fab: ^2.1.0
+
 dev_dependencies:
   build_runner: ^2.4.11
   json_serializable: ^6.8.0
