--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,33 +7,41 @@ environment:
   sdk: '>=3.4.1 <4.0.0'
 
 dependencies:
-  bloc: ^8.1.4
-  equatable: ^2.0.5
+  # core
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.6
+  rxdart: ^0.28.0
+  uuid: ^4.4.0
+
+  # localization
+  intl: ^0.19.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
 
-  # app_utils:
-  #   path: lib/src/shared/app_utils
-  flutter_local_notifications: ^17.1.2
-  rxdart: ^0.28.0
-  flutter_timezone: ^1.0.8
+  # bloc
+  bloc: ^8.1.4
+  meta: ^1.12.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.6
+  json_annotation: ^4.9.0
+
+  # firebase
   firebase_core: ^3.1.1
   cloud_firestore: ^5.0.2
-  json_annotation: ^4.9.0
-  uuid: ^4.4.0
-  meta: ^1.12.0
-  shared_preferences: ^2.2.3
-  openfoodfacts: ^3.12.0
 
+  # notifications
+  flutter_local_notifications: ^17.1.2
+  flutter_timezone: ^1.0.8
+
+  # products
+  openfoodfacts: ^3.12.0
   mobile_scanner: ^5.1.1
 
+  # hive
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
+  # ui
   flutter_expandable_fab: ^2.1.0
 
 dev_dependencies:
