--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,6 +64,11 @@ android {
         implementation 'androidx.window:window:1.0.0'
         implementation 'androidx.window:window-java:1.0.0'
         coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+
+
+        implementation(platform("com.google.firebase:firebase-bom:33.1.2"))
+        implementation("com.google.firebase:firebase-auth")
+        implementation("com.google.android.gms:play-services-auth:21.2.0")
     }
 }
 
