--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,13 @@ dependencies:
 
   # firebase
   firebase_core: ^3.1.1
+
+  firebase_auth: ^5.1.2
+  firebase_ui_auth: ^1.15.0
+
+  google_sign_in: ^6.2.1
+  firebase_ui_oauth_google: ^1.3.3
+
   cloud_firestore: ^5.0.2
 
   # notifications
